syntax = "proto3";

message PlayerState {
  uint32 id = 1;
  float x = 2;
  float y = 3;
  bool isMoving = 4;
  float targetX = 5;
  float targetY = 6;
  float rotationAngle = 7;
}

message GameState {
  repeated PlayerState playerStates = 1;
}

message ActionResponse {
  uint32 action_id = 1;
  GameState game_state = 2;
}